--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/cursor.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/cursor.css">
         <title>Почему я решила стать архитектором?</title>
     </head>
     <body>
@@ -114,8 +114,8 @@
             <div class="photos-right"></div>
         </div>
         <div class="follow-cursor"></div>
-        <script src="/sripts/scrript.js"></script>
-        <script src="/sripts/cursor.js"></script>
-        <script src="/sripts/photos.js"></script>
+        <script src="sripts/scrript.js"></script>
+        <script src="sripts/cursor.js"></script>
+        <script src="sripts/photos.js"></script>
     </body>
 </html>
